# code-compass

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  codecompass-blueprint.md  pyproject.toml
.github/workflows/: ci.yml  daily-improve.yml
codecompass/: config.py
codecompass/api/: app.py  schemas.py
codecompass/api/routers/: ask.py  health.py
codecompass/cli/: config_cmd.py  main.py
codecompass/config/: __init__.py  manager.py  schema.py
codecompass/eval/: __init__.py  metrics.py  report.py  runner.py
codecompass/eval/golden/: requests_golden.json
codecompass/generate/: __init__.py  answerer.py  models.py  prompts.py
codecompass/graph/: __init__.py  extractor.py  model.py  schema.sql
codecompass/index/: __init__.py  bm25_indexer.py  embedder.py  ingest_state.py  vector_indexer.py
codecompass/ingest/: __init__.py  chunker.py  chunker_fallback.py  chunker_treesitter.py  language.py  models.py  reader.py  walker.py
codecompass/providers/: __init__.py  base.py  embedding_fastembed.py  embedding_sentence_transformer.py  factory.py  llm_anthropic.py  llm_litellm.py  llm_ollama.py  llm_openai_compat.py  llm_subprocess.py  vector_store_chroma.py
codecompass/retrieve/: __init__.py  bm25.py  context_packer.py  dense.py  hybrid.py
docs/decisions/: 001-embedding-model.md
mcp_server/: server.py
scripts/: daily_improve.py  tasks.json
tests/: conftest.py  test_api.py  test_chunker.py  test_config.py  test_context_packer.py  test_graph.py  test_metrics.py
tests/fixtures/tiny_repo/: main.py  utils.py
ui/: app.py
