[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-compass"
version = "0.1.0"
description = "RAG-powered code intelligence: search, cite, graph — no API keys required"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50.0",
    "fastembed>=0.4.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gitpython>=3.1.43",
    "pydantic>=2.8.0",
    "rich>=13.8.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.1",
    "tenacity>=9.0.0",
    "tomli-w>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Install SDK for your cloud LLM provider (only needed if using litellm provider)
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
google = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
codecompass = "codecompass.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["codecompass", "mcp_server"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["codecompass", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
